src/Nav/index.css
nav{
  box-shadow: 0 5px 40px 1px rgba(0,0,0,.25)
}

.nav-container{
  max-width: 100%;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

nav h1{
  color: rgb(37, 37, 37);
  margin-right: auto;
}

nav ul,li{
  list-style-type: none;
  display: inline;
}

nav li{
  padding: 0 30px 0 30px;
}

nav a{
  text-decoration: none;
  color: rgb(37, 37, 37);
}

